Make dog walk with legs

--- a/ShowDogs/index.html
+++ b/ShowDogs/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <img id="dog" src="dog.png" />
+    <div id="dog">
+      <img src="dog.png" />
+      <img src="dog2.png" />
+    </div>
     <script src="./renderer.js"></script>
   </body>
 </html>
